permenant scroll bar to stop shifting

--- a/www/style.css
+++ b/www/style.css
@@ -1,4 +1,5 @@
 body {
+    height: 1.01vh;
 	width: 80%;
 	margin: auto;
     font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
